# metaprompt

./: .gitignore  README.md  cyber.xlsx  messagestore.pickle  meta.py  metaprompt.jinja  pyproject.toml  readme.md  review_certificates_prompt.txt  setup.py
Metaprompt.egg-info/: PKG-INFO  SOURCES.txt
src/metaprompt/: meta.py
src/metaprompt/prompts/: example_task.jinja  metaprompt_examples.jinja
