[project]
name = "metaprompt"
version = "1.0.0"
description = "A framework for building complex AI prompts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.68.0",
    "conduit",
    "database-clients",
    "google-genai>=1.38.0",
    "instructor>=1.11.3",
    "jinja2>=3.1.6",
    "openai>=1.107.3",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "tinydb>=4.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metaprompt"]
sources = ["src"]
include = ["src/metaprompt/py.typed"]

[tool.uv.sources]
database-clients = { path = "../database-clients", editable = true }
conduit = { path = "../conduit-project", editable = true }

[project.scripts]
metaprompt = "metaprompt.meta:main"
