[project]
name = "metaprompt"
version = "1.0.0"
description = "A framework for building complex AI prompts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "conduit",
    "dbclients",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metaprompt"]
sources = ["src"]
include = ["src/metaprompt/py.typed"]

[tool.uv.sources]
dbclients = { path = "../dbclients-project", editable = true }
conduit = { path = "../conduit-project", editable = true }

[project.scripts]
metaprompt = "metaprompt.meta:main"
